add html show result

--- a/style.css
+++ b/style.css
@@ -46,3 +46,13 @@
     font-size: 18px;
     
 }
+
+#title{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#result{
+    height: 20px;
+}
